Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: blackrose-app
    namespace: blackrose # too add the file to a ns
spec:
    selector:
        matchLabels:
            app: blackrose-app
            type: front-end
    replicas: 1
    template:
        metadata:
            name: blackrose-app
            labels:
                app: blackrose-app
                type: front-end
        spec:
            containers:
                - name: blackrose-app-frontend
                  image: teejay4125/blackrose-update:v6
                  ports:
                      - containerPort: 5173
