Kubernetes/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Ingress-apps
  namespace: default 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx 
  rules:
    - http:
        paths:
          
          - path: /argocd(/|$)(.*) 
            pathType: Prefix 
            backend:
              service:
                name: argocd-server 
                port:
                  number: 80 
          - path: /vault(/|$)(.*) 
            pathType: Prefix 
            backend:
              service:
                name: vault 
                port:
                  number: 8200
